Revision history for {{$dist->name}}

{{$NEXT}}
          rename ClearPrereqs to RemovePrereqs

          the Zilla assembler no longer provides a default zilla_class
          (because doing so had lost any meaning)

4.101800  2010-06-29 10:29:38 America/New_York
          during dist minting, ModuleMaker occurs before FileGatherer

          ModuleBuild's module_build argument generation is now a method

          Dist::Zilla is now an abstract base class, basically

          * Dist::Zilla::Dist::Builder and ::Minter perform the real work

          * Dist::Zilla::Tester has been updated to work with these

          a very basic test for minting, now possible, has been added

          added prune_file method to Dist::Zilla to eliminate the need for
          altering the ->files arrayref directly

          added the ClearPrereqs plugin

          [Prereq] is now called [Prereqs], but [Prereq] will continue to work
          until v6 or v7 or so

4.101780  2010-06-27 14:30:55 America/New_York
          the Chrome role now requires three input methods: prompt_any_key,
          prompt_yn, and prompt_str

          Term and Test chrome now implement the required input methods

          ConfirmRelease now uses Chrome to prompt for input

          `dzil setup` added to create a starting config.ini

4.101740  2010-06-23 22:56:51 America/New_York
          fix assembly of local stashes (Jesse Luehrs)

          fix PkgVersion and PodVersion to work on scripts (M. Gardner)

          add PkgDist plugin for questionable reasons

          add MintingProfile, `dzil new -P` (rjbs and SamuraiJack)

          add ModuleShareDirs for per-module ShareDir (David Golden)

          add the User stash and make author use it by default

          ManifestSkip no longer falls back to default MANIFEST.SKIP

          minor improvements to documentation and consistency of code layout

4.101612  2010-06-10 12:12:00 America/New_York