@@ -1,0 +1,9 @@
+
+[%User]
+name  = E. Xavier Ample
+email = ea@example.com
+
+[%Rights]
+license_class    = BSD
+copyright_holder = A. U. Thor
+
